Small fixes in button styles: adding center text alignmebt

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,6 +82,7 @@ body {
 //!!!ALSO YOU NEED TO ADD FONTWESOME
   
 .effect {
+  text-align: center;
   display: inline-block;
   position: relative;
   text-decoration: none;
